--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <a href="./pages/system_diagnostics.html">System Diagnostics Manager</a>
         <a href="./pages/ststem_state.html">System State</a>
     </section>
+    <button id="send">送信</button>
+    <ul>
+        <li id="recieve"></li>
+    </ul>
     <script src="/script.js" defer></script>
 </body>
 
