--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <ul>
         <li id="recieve"></li>
     </ul>
-    <script src="./script.js" defer></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
